--- a/district_adm_plots.qmd
+++ b/district_adm_plots.qmd
@@ -31,18 +31,25 @@ execute:
    message: false
 ---
 
-The state of Oregon uses a student-based funding model to allocate revenues to its 197 school districts. In this analysis, I will describe trends in its funding allocation from 2011 to 2024.
+The state of Oregon uses a student-based funding model to allocate revenues to its 197 school districts. In this analysis, I will describe descriptive trends in district enrollment, districts' state-funding allocation, district revenue, and district expenditure related to students with disabilities whose services cost more than a given threshold and are paid by the grant called *High-Cost Disability Grant*.
 
 ```{r}
 # load libraries
 library(tidyverse)
 library(gghighlight)
-library(geomtextpath)
+#library(geomtextpath)
 library(patchwork)
-library(modelsummary)
 ```
 
 ```{r}
+# load r with plots code
+source("code/writeup_plots.R")
+```
+
+## District ADM Data
+
+```{r}
+# data prep
 district_year_adm <- readr::read_csv(here::here("data_clean/district_year_admw.csv")) %>%
   select(-1) %>%
   # make columns for iep related information
@@ -60,114 +67,76 @@ district_year_adm <- readr::read_csv(here::here("data_clean/district_year_admw.c
          district_iep_eff_weight = (district_iep_11 + district_iep_above_11)/district_iep_students
          )
 
-hcd_year <-  readr::read_csv(here::here("data_clean/hcd_year_good.csv")) %>%
-  select(-1)
-
-hcd_all_year <- readr::read_csv("data_clean/hcd_state_2003_2022.csv") %>%
-  select(-1)
-
 district_details <- district_year_adm %>%
   distinct(school_year, district_id, district_name, current_year_adm_district)
+
+
+hcd_year <-  readr::read_csv(here::here("data_clean/hcd_year_good.csv")) %>%
+  select(-1) %>%
+  rename("district_id" = "dist_id") %>%
+  left_join(district_details)
+
+hcd_all_year <- readr::read_csv("data_clean/hcd_state_2003_2022.csv") %>%
+  select(-1) 
 ```
 
-```{r}
-one_year_scatterplot <- function(df, year = 2011, 
-                                 var_y, var_x, log_x_on = T, log_y_on = T,
-                                lab_x = "", lab_y = "") {
-  
-  plot <- df %>%
-  filter(school_year == year) %>%
-  distinct(school_year, {{var_x}}, {{var_y}}) %>%
-  mutate(across(-school_year), ~.x - mean(,x)) %>%
-  ggplot(aes(x = {{var_x}}, y = {{var_y}})) +
-  geom_smooth()+
-  geom_vline(xintercept = 0) +
-  geom_xline(y_intercept = 0) +
-  geom_point() +
-  labs(
-    x = lab_x,
-    y = lab_y
-  ) 
-  
-  if(log_x_on == TRUE){
-    plot <- plot +
-      scale_x_continuous(trans = "log10",
-                     breaks = c(1, 10, 100, 1000, 10000))
-  }
-  
-  if(log_y_on == TRUE){
-    plot <- plot +
-      scale_y_continuous(trans = "log10",
-                     breaks = c(1, 10, 100, 1000, 10000))
-  }
-  
-  return(plot)
-  
-}
-```
+### Trends in Enrollment Across Years with the Average Highlighted
 
 ```{r}
-plots_theme <- function(ggplot_object){
-  ggplot_object <- ggplot_object +
-  theme_minimal()  +
-  theme(
-    panel.grid = element_blank(),
-    plot.background = element_rect(fill = "azure", color = "transparent")
-  ) +
-    guides(color = "none",
-           fill = "none")
-  
-  return(ggplot_object)
-}
+cont_across_years_w_mean(district_year_adm,
+             var_x = school_year,
+             var_y = current_year_adm_district,
+             mean_type = 2,
+             mean_numerator = "",
+             mean_denominator = "",
+             log_on = T,
+             round_pos = 0,
+             lab_y = "Log of Student Membership")
 ```
+
+### Trends in Enrollment Across Years with Districts > 30k enrollment Highlighted
 
 ```{r}
 cont_across_years(district_year_adm,
              var_x = school_year,
              var_y = current_year_adm_district,
-             log_on = F)+
+             log_on = F,
+             lab_y = "Student Membership")+
   gghighlight(max(current_year_adm_district) > 30000,
               label_key = district_name,
-              unhighlighted_params = list(alpha = 0.3)) +
-  scale_color_brewer(palette = "Dark2") +
-  labs(title = "District Student Membership Across Years")
-
-cont_across_years(district_year_adm,
-             var_x = school_year,
-             var_y = current_year_adm_district,
-             log_on = F)+
-  gghighlight(max(current_year_adm_district) > 13000 & max(current_year_adm_district) < 30000,
-              label_key = district_name,
-              unhighlighted_params = list(alpha = 0.3)) +
-  scale_color_brewer(palette = "Dark2") +
-  labs(title = "District Student Membership Across Years")
-
-cont_across_years(district_year_adm,
-             var_x = school_year,
-             var_y = current_year_adm_district,
-             log_on = T)+
-  gghighlight(max(current_year_adm_district) < 10,
-              label_key = district_name,
-              unhighlighted_params = list(alpha = 0.3)) +
-  scale_color_brewer(palette = "Dark2") +
-  labs(title = "Log District Student Membership Across Years")
+              unhighlighted_params = list(alpha = 0.5)) +
+  scale_color_brewer(palette = "Dark2") 
 ```
 
+### Trends in Enrollment Across Years with Districta 13-20k enrollment Highlighted
 
-<!-- ```{r} -->
-<!-- district_2024_adm_arrange <- district_year_adm %>% -->
-<!--   filter(school_year == "2024") %>% -->
-<!--   distinct(district_name, current_year_adm_district) %>% -->
-<!--   arrange(desc(current_year_adm_district)) %>% -->
-<!--   mutate(text = paste0(district_name,": ",round(current_year_adm_district))) -->
-<!-- ``` -->
+```{r}
+cont_across_years(district_year_adm,
+             var_x = school_year,
+             var_y = current_year_adm_district,
+             log_on = F,
+             lab_y = "Student Membership")+
+  gghighlight(max(current_year_adm_district) > 13000 & max(current_year_adm_district) < 30000,
+              label_key = district_name,
+              unhighlighted_params = list(alpha = 0.5)) +
+  scale_color_brewer(palette = "Dark2")
+```
 
-<!-- **District-ADM by school year**: District ADM exhibits similar distribution by academic year. In 2017, 2020 and 2021, there were districts with less than 1 student. The vast majority of districts have around 1000 students. The median number of students in a school district across years is close to 800 and the mean number of students in a school district across years is 2800. -->
+### Trends in Enrollment Across Years with Districts <10 students Highlighted
 
-<!-- The 10 biggest school districts in 2024 in Oregon were: `r head(district_2024_adm_arrange, 10) %>% pull(text)`. -->
+```{r}
+cont_across_years(district_year_adm,
+             var_x = school_year,
+             var_y = current_year_adm_district,
+             log_on = T,
+             lab_y = "Log of Student Membership")+
+  gghighlight(max(current_year_adm_district) < 10,
+              label_key = district_name,
+              unhighlighted_params = list(alpha = 0.5)) +
+  scale_color_brewer(palette = "Dark2")
+```
 
-<!-- The 10 smallest schools districts in 2024 in Oregon were: `r tail(district_2024_adm_arrange, 10) %>% pull(text)`. -->
-
+### Trends in State - Subgroup Enrollment 
 
 ```{r}
 district_year_subgroup_enrollment <- district_year_adm %>%
@@ -180,9 +149,8 @@ district_year_subgroup_enrollment <- district_year_adm %>%
   group_by(school_year, category, district_id, district_name) %>%
   summarize(current_year_adm = sum(current_year_adm))) %>%
   rbind(hcd_year %>%
-          select(school_year, actual_hcd_count, dist_id) %>%
-          rename("district_id" = "dist_id",
-                 "current_year_adm" = "actual_hcd_count") %>%
+          select(school_year, actual_hcd_count, district_id, district_name) %>%
+          rename("current_year_adm" = "actual_hcd_count") %>%
           mutate(category = "HCD")) %>%
   mutate(category = gsub("Students in ", "", category)) %>%
   group_by(school_year, district_id) %>%
@@ -191,7 +159,6 @@ district_year_subgroup_enrollment <- district_year_adm %>%
     total = current_year_adm[category == "ADMr"]
   )
 ```
-
 
 ```{r}
 state_year_subgroup_enrollment <- district_year_subgroup_enrollment %>%
@@ -209,59 +176,107 @@ state_year_subgroup_enrollment <- district_year_subgroup_enrollment %>%
   ) %>%
   filter(category != "ADMr", !is.na(percentage))
 ```
+
 ```{r}
-ggplot(state_year_subgroup_enrollment, aes(x = school_year,
+ggplot(filter(state_year_subgroup_enrollment, school_year < 2023),
+       aes(x = school_year,
                node = category,
                fill = category,
                value = percentage)) +
-  geom_sankey_bump(space = 0, type = "alluvial", color = "transparent", smooth = 6) +
-  scale_fill_viridis_d(option = "A", alpha = .8) +
-  theme_sankey_bump(base_size = 16) +
+  geom_sankey_bump(space = 0, type = "alluvial", color = "transparent", smooth = 6,
+                   alpha = 0.6) +
+  scale_fill_brewer(palette = "Dark2") +
+  scale_x_continuous(breaks = 2011:2022) +
+  theme_sankey_bump() +
+  annotate("label",
+           x = 2012,
+           label = "Poverty",
+           y = 35)+
+    annotate("label",
+           x = 2012,
+           label = "IEP",
+           y = 19)+
+    annotate("label",
+           x = 2012,
+           label = "EL",
+           y = 8)+
   labs(x = NULL,
        y = "Percentage",
        fill = NULL,
        color = NULL) +
   theme(legend.position = "bottom") +
+  guides(color = "none",
+         fill = "none")+
   labs(title = "State-level subgroup representation")
 ```
 
-```{r}
-categories <- unique(district_year_subgroup_enrollment$category)[c(1,3:5)]
+### Trends in District - Subgroup Enrollment Across Years
 
+```{r}
+categories <- unique(district_year_subgroup_enrollment$category)[c(1,3:7)]
+
+# HCD plot weird
 map(categories, ~cont_across_years_w_mean(df = filter(district_year_subgroup_enrollment, category == .x), var_x = school_year, var_y = prop_current_year_adm, log_on = F,
                                           mean_numerator = current_year_adm,
-                                          mean_denominator = total) +
+                                          mean_denominator = total,
+             lab_y = "Proportion of District Membeship") +
       labs(title = .x))
 ```
 
-Proportion of subgroups by total enrollment <Quantile of enrollment and quantile of proportion by a category> Two ways to represent
+
+### Trends in District - Subgroup Enrollment by Total Enrollment For One-Year
 
 ```{r}
-one_year_scatterplot_w_bars(df = district_year_subgroup_enrollment %>%
-  filter(category == "ESL programs"),
-   var_y = prop_current_year_adm, 
-  var_x = total, log_x_on = T, log_y_on = F,
-                                  add_bars = T,
-                                 var_x_name = "District Membership", var_y_name = "Proportion of students in ESL programs"
-)
+
+map(categories, ~one_year_scatterplot_w_bars(df = filter(district_year_subgroup_enrollment, category == .x), var_x = total, var_y = prop_current_year_adm, log_x_on = T, 
+                                          log_y_on = F,
+                                          var_x_name = "District Membership", 
+                                          var_y_name = .x,
+                                  add_bars = T))
+
+
 
 ```
 
+## District Funds Allocation Data
 
 ```{r}
 district_year_adm_summary <- district_year_adm %>%
   distinct(school_year, district_id, current_year_adm_district, current_year_admw_district, current_year_eff_admw_district) %>%
   mutate(
     adm_admw_ratio = current_year_admw_district/current_year_adm_district,
-    eff_adm_admw_ratio = current_year_eff_admw_district/current_year_adm_district
+    eff_adm_admw_ratio = current_year_eff_admw_district/current_year_adm_district,
+    difference_ratio = eff_adm_admw_ratio - adm_admw_ratio
   ) 
 
-one_year_scatterplot_w_bars(df =district_year_adm_summary,
-   var_y = current_year_admw_district, 
-  var_x = current_year_adm_district, log_x_on = T, log_y_on = T,
-                                  add_bars = F,
-                                 var_x_name = "District Membership", var_y_name = "Proportion of students in ESL programs"
-)
+one_year_scatterplot_w_bars(df = district_year_adm_summary, 
+                            var_x = current_year_adm_district, 
+                            var_y = adm_admw_ratio, 
+                            log_x_on = T, 
+                            log_y_on = F,
+                            var_x_name = "Current Year District Membership", 
+                            var_y_name = "Allocation Ratio",
+                                  add_bars = T)
+
+
+one_year_scatterplot_w_bars(df = district_year_adm_summary, 
+                            var_x = current_year_adm_district, 
+                            var_y = eff_adm_admw_ratio, 
+                            log_x_on = T, 
+                            log_y_on = F,
+                            var_x_name = "Current Year District Membership", 
+                            var_y_name = "Effective Allocation Ratio",
+                                  add_bars = T)
+
+one_year_scatterplot_w_bars(df = district_year_adm_summary, 
+                                        
+                            var_x =current_year_adm_district, 
+                            var_y =  difference_ratio, 
+                            log_x_on = T, 
+                            log_y_on = F,
+                            var_x_name = "Current Year Enrollment", 
+                            var_y_name = "Difference: Effective and Calculated Allocation Ratio",
+                                  add_bars = T)
 
 # library(lme4)
 # 
@@ -271,128 +286,209 @@ one_year_scatterplot_w_bars(df =district_year_adm_summary,
 # The enrollment remains pretty stable between districts across time.
 ```
 
-**What proportion of District-ADM do districts get?** The allocation rate (ADM-Weighted/ADM) per student has an exponential decay shape: Small districts (with less than 100 students) get between 2 to 9 times the allocation per student. Districts between 100 to 1000 students get between 1 to 2 times the allocation per student. The relationship is close to the 1 line for schools with higher than 1000 students. The median allocation ratio is `r median(district_year_adm_ratio$adm_admw_ratio)`. About 20% of the variation in the allocation ratio is explained at the between-district levels.
+```{r}
+#| eval: false
+# **What proportion of District-ADM do districts get?** The allocation rate (ADM-Weighted/ADM) per student has an exponential decay shape: Small districts (with less than 100 students) get between 2 to 9 times the allocation per student. Districts between 100 to 1000 students get between 1 to 2 times the allocation per student. The relationship is close to the 1 line for schools with higher than 1000 students. The median allocation ratio is `r median(district_year_adm_ratio$adm_admw_ratio)`. About 20% of the variation in the allocation ratio is explained at the between-district levels.
+# 
+# **How much do schools really get?** Since Oregon has a safeguard rule where the districts get max of their previous or current year weighted ADM, most school districts get funds allocated more than their resident schools in a given year. In the whole sample, only proportion of the times did districts get funds based on their current year ADM.
+# 
+# **What proportion of district ADM are categories that get exclusive funding?** **And variation that is explained by between district factors?**
 
-**How much do schools really get?** Since Oregon has a safeguard rule where the districts get max of their previous or current year weighted ADM, most school districts get funds allocated more than their resident schools in a given year. In the whole sample, only \<\> proportion of the times did districts get funds based on their current year ADM.
+```
 
-**What proportion of district ADM are categories that get exclusive funding?** **And variation that is explained by between district factors?**
+## Revenue Data
 
-Next set of plots:
-
--   Trends in Revenue: money from state, local, and federal sources - and variation.
 
 ```{r}
 revenue <- readr::read_csv("data_clean/district_revenue_sources_2019_2022.csv") %>%
   select(-1) %>%
   left_join(district_details)
+```
 
-# dot-plot
-revenue %>%
-  filter(source == "federal") %>%
-  mutate(ppe = revenue_dollar/current_year_adm_district) %>%
-  cont_across_years_w_mean(df = ., var_y = ppe, var_x = school_year, log_on = T, mean_type = 2, mean_numerator = "", mean_denominator = "", add_dollar = T) 
+### State Trends in Per-pupil revenue based on sources
 
-cont_across_years_w_mean(df = revenue, var_y = ppe, var_x = school_year, log_on = T, mean_type = 2, mean_numerator = "", mean_denominator = "", add_dollar = T) 
- 
+```{r}
+#how much money?
 revenue %>%
-    distinct(school_year, district_id, district_name, ppe) %>%
-    ggplot(aes(x = school_year, y = ppe)) +
-    geom_line(aes(group = district_name), color = "gray80", alpha = 0.3) +
-    #scale_y_log10()+
-    # geom_smooth(se = F)+
-    # scale_y_log10(
-    #   breaks = c(1,10,100,1000, 10000, 50000)
-    # ) +
-    theme_minimal()+
-    theme(
-      panel.grid = element_blank(),
-      axis.ticks = element_line()
+  group_by(school_year) %>%
+  summarize(total_year = sum(revenue_dollar, na.rm = T)) %>%
+  ggplot(., aes(x = school_year, y = total_year)) +
+  geom_col(alpha = 0.7, fill = "#A6761D") +
+  scale_y_continuous(
+    breaks = c(0,5,10,15,20)*1000000000,
+    labels = c("0", "5B", "10B", "15B", "20B")
     ) +
-    guides(color = "none") +
+  labs(x = NULL,
+       y = "Total Revenue") +
+  theme_minimal()
+```
 
-# facet-plot,
-ggplot(revenue, aes(y = per_revenue, x = source, color = source)) +
-  geom_jitter(alpha = 0.5) +
-  facet_wrap(~school_year) +
-  scale_y_continuous(limits = c(0,1))
 
+```{r}
+# state-revenue trends
 revenue %>%
-  #filter(source != "other") %>%
   group_by(school_year, source) %>%
-  summarize(state_total = sum(revenue_dollar)) %>%
-  mutate(prop = state_total/sum(state_total)) %>%
-  ggplot(aes(y = factor(school_year), x = prop, fill = source)) +
-  geom_col()
-
-lmer(total_revenue ~ 1 | district_id,
-     distinct(revenue, school_year, district_id, total_revenue))
-
-lmer(per_revenue ~ 1 | district_id,
-     distinct(filter(revenue, source == "intermediate"), school_year, district_id, per_revenue))
-
-# most variation in revenue is explained at the between district levels, like 98% - local and state more stable. federal, other, intermediate more variable.
+  summarize(
+    total_source = sum(revenue_dollar, na.rm = T)
+  ) %>%
+  group_by(school_year) %>%
+  mutate(total_year = sum(total_source),
+         per_category = total_source/total_year) %>%
+  ggplot(., aes(x = school_year, y = per_category, fill = str_to_title(source))) +
+  geom_col(alpha = 0.7) +
+  geom_text(aes(label = round(per_category, 2),
+                color = per_category > 0.1),
+            position = position_fill()) +
+  scale_fill_brewer(palette = "Dark2") +
+  scale_color_manual(values = c("transparent","gray10")) +
+  guides(
+    color = "none"
+  ) +
+  labs(
+    x = "",
+    y = "Proportion of Revenue",
+    fill = NULL
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.y = element_blank(),
+    legend.position = "top"
+  )
 ```
 
--   Trends in aggregated expenditure by categories defined in the dataset - and variation
 
 ```{r}
-#df ready
+# without other
+revenue %>%
+  filter(source != "other") %>%
+  group_by(school_year, source) %>%
+  summarize(
+    total_source = sum(revenue_dollar, na.rm = T)
+  ) %>%
+  group_by(school_year) %>%
+  mutate(total_year = sum(total_source),
+         per_category = total_source/total_year) %>%
+  ggplot(., aes(x = school_year, y = per_category, fill = source)) +
+  geom_col(alpha = 0.7) +
+  geom_text(aes(label = round(per_category, 2),
+                color = per_category > 0.05),
+            position = position_fill()) +
+  scale_fill_brewer(palette = "Dark2") +
+  scale_color_manual(values = c("transparent","gray10")) +
+  guides(
+    color = "none"
+  ) +
+  labs(
+    x = "",
+    y = "Proportion of Revenue",
+  fill = NULL
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.y = element_blank(),
+    legend.position = "top"
+  )
 ```
-
-Main interest: funding for and expenditure on two groups: SpEd and EL
-
--   funding: HCD
+### Trends in Per-pupil revenue by Districts based on sources
 
 ```{r}
-ggplot(hcd_all_year,
-       aes(y = factor(school_year),
-           x = threshold)) +
-  geom_col()
+revenue_sources <- unique(revenue$source)
 
-ggplot(hcd_all_year,
-       aes(y = factor(school_year),
-           x = grant_amount)) +
-  geom_col()
-
-ggplot(hcd_all_year,
-       aes(y = factor(school_year),
-           x = eligible_students)) +
-  geom_col() #percent of total, already shown. between 0.5 to 1% from 2011 to 2022
-
-ggplot(hcd_all_year,
-       aes(y = factor(school_year),
-           x = total_expenditre)) +
-  geom_col()
-
-# total expenditure per student
-ggplot(hcd_all_year,
-       aes(y = factor(school_year),
-           x = total_expenditre/eligible_students)) +
-  geom_col()
-
-# total expenditure per student
-ggplot(hcd_all_year,
-       aes(y = factor(school_year),
-           x = expenditure_above_threshold/eligible_students)) +
-  geom_col()
-
-#
-ggplot(hcd_all_year,
-       aes(y = factor(school_year),
-           x = calculated_rate)) +
-  geom_col()
+map(revenue_sources, ~cont_across_years_w_mean(df = filter(revenue, source == .x) %>%
+                                                 mutate(ppe = revenue_dollar/current_year_adm_district), 
+                                               var_x = school_year, 
+                                               var_y = ppe, log_on = T,
+                                               mean_type = 2,
+                                          mean_numerator = "",
+                                          mean_denominator = "",
+                                          add_dollar = T,
+                                          lab_y = "Per-pupil revenue") +
+      labs(title = paste0("From ", str_to_title(.x)," sources")))
 ```
 
+Describe: Other includes balance in the state account.
 
--   prop of iep adm that's from 11% and that's on top
+### Trends in Revenue by District Enrollment
+
 
 ```{r}
-
+map(revenue_sources, ~one_year_scatterplot_w_bars(df = filter(revenue, source == .x) %>%
+                                                 mutate(ppe = revenue_dollar/current_year_adm_district), 
+                                               var_x = current_year_adm_district, 
+                                               var_y = ppe, 
+                                               log_x_on = T,
+                                               log_y_on = F,
+                                              var_x_name = "Current Year Enrollment", 
+                            var_y_name = paste0("Per-pupil Revenue: ",str_to_title(.x)),
+                                  add_bars = T))
 ```
 
 
--   what proportion of oregon students get funding through the double funding route?
+## HCD Population
 
--   Expenditure: Use same criteria to make the aggregated categories but separate for flagged and not, and
 
--   Evaluate discontinuity
+### Students eligible for HCD and Grant Amount
+
+```{r}
+hcd_eligible <- hcd_bar_plot(df = hcd_all_year,
+             var_x = eligible_students,
+             var_label = eligible_students,
+             title = "Eligible Students",
+             nudge = -300, seed = 2)
+
+hcd_grant <- hcd_bar_plot(df = mutate(hcd_all_year, grant_amount_text = gsub("0{1,}","M", grant_amount)),
+             var_x = grant_amount,
+             var_label = grant_amount_text,
+             title = "Grant Amount", seed = 2,
+             position = "right")
+
+
+hcd_eligible + hcd_grant
+```
+### Students eligible for HCD and Per-pupil expenditure above threshold
+
+```{r}
+expense_per_student <- hcd_bar_plot(df = mutate(hcd_all_year, ppe = expenditure_above_threshold/eligible_students),
+             var_x = ppe,
+             var_label = scales::dollar(round(ppe, -2)),
+             title = "Average Expense per student", seed = 2,
+             position = "right")
+
+hcd_eligible + expense_per_student
+```
+
+### Per-pupil reimbursment and Per-pupil expenditure above threshold
+
+
+```{r}
+reimbusement_per_student <- hcd_bar_plot(df = mutate(hcd_all_year, ppe = expenditure_above_threshold*calculated_rate/eligible_students),
+             var_x = ppe,
+             var_label = scales::dollar(round(ppe, -2)),
+             title = "Average Reimbursement per student", seed = 2,
+             position = "left")
+
+reimbusement_per_student + expense_per_student
+```
+
+
+```{r}
+#| eval: false
+
+# -   Trends in aggregated expenditure by categories defined in the dataset - and variation
+# 
+# Main interest: funding for and expenditure on two groups: SpEd and EL
+# 
+# 
+# <Is the 11% clean variation, or 2 year max a clean variation? If they are gaming one, are they gaming the other?>
+# The district level optimization around the rules.
+# 
+# -   prop of iep adm that's from 11% and that's on top
+# 
+# -   what proportion of oregon students get funding through the double funding route?
+# 
+# -   Expenditure: Use same criteria to make the aggregated categories but separate for flagged and not, and
+# 
+# -   Evaluate discontinuity
+```
+
+
