--- a/district_adm_plots.qmd
+++ b/district_adm_plots.qmd
@@ -1,6 +1,5 @@
 ---
 title: "An Overview of Oregon's State Funding Allocation"
-subtitle: "Subtitle"
 editor_options: 
   chunk_output_type: console
 author: "Havisha Khurana"
@@ -13,8 +12,6 @@ format:
         highlight: tango
         df-print: paged
         self-contained-math: true
-        abstract: You can add an abstract here
-        abstract-title: Abstract Title
         toc: true
         toc_float: true
         toc_location: "left"
@@ -31,7 +28,11 @@ execute:
    echo: false
 ---
 
-The state of Oregon uses a student-based funding model to allocate revenues to its 197 school districts. In this analysis, I will describe descriptive trends in district enrollment, districts' state-funding allocation, district revenue, and district expenditure related to students with disabilities whose services cost more than a given threshold and are paid by the grant called *High-Cost Disability Grant*.
+In Oregon, state and local revenues are pooled together and redistributed to school districts based on a funding formula. Approximately 60% of the total education budget comes from the state’s share, making it a critical revenue source for most districts. The **State School Fund (SSF)** allocates lump-sum funding to districts based on the number of resident students, adjusted for differential needs as specified by the Oregon Revised Statutes (ORS 327.008). Students with disabilities are double-weighted in the funding formula, with districts guaranteed double-weighted funding for up to 11% of their student population. Other student groups, such as students classified as English Language Learners or those qualifying for Free-or-reduced price lunch are also proportionately weighted in the formula. While state allocations are tied to student demographics, districts have the flexibility to use these revenues as they see fit. 
+
+Another state fiscal policy to support students with disabilities is the **High-Cost Disability Fund**, which reimburses districts for expenses exceeding \$30,000 per special education student (the cap was at \$25,000 from 2003-2005). Each year, a portion of the SSF, amounting to less than 5% of the total appropriation, is designated for this fund. If statewide claims exceed the available funds, reimbursements are prorated across districts. 
+
+In this analysis, I will describe descriptive trends in district enrollment, districts' state-funding allocation, district revenue, and district expenditure related to students with disabilities whose services cost more than a given threshold and are paid by the grant called *High-Cost Disability Fund*.
 
 ```{r}
 # load libraries
@@ -47,6 +48,8 @@ source("code/writeup_plots.R")
 ```
 
 ## District ADM Data
+
+*District-level allocations from the State School Fund (SSF), disaggregated by student type, covering the years 2011–2024.*
 
 ```{r}
 # data prep
@@ -94,6 +97,8 @@ cont_across_years_w_mean(district_year_adm,
              lab_y = "Log of Student Membership")
 ```
 
+An average Oregon school districts’ enrollment is around 2800 students- which remains pretty stable across the years. However, there is substantial variation in enrollment between districts. 
+
 ### Trends in Enrollment Across Years with Districts \> 30k enrollment Highlighted
 
 ```{r}
@@ -107,6 +112,8 @@ cont_across_years(district_year_adm,
               unhighlighted_params = list(alpha = 0.5)) +
   scale_color_brewer(palette = "Dark2") 
 ```
+
+The three biggest districts - **Portland, Salem-Keizer, and Beaverton** have more than 35000 students.
 
 ### Trends in Enrollment Across Years with Districta 13-20k enrollment Highlighted
 
@@ -122,6 +129,8 @@ cont_across_years(district_year_adm,
   scale_color_brewer(palette = "Dark2")
 ```
 
+A handful of districts - **including Eugene 4J** have more than 13000 students.
+
 ### Trends in Enrollment Across Years with Districts \<10 students Highlighted
 
 ```{r}
@@ -135,6 +144,8 @@ cont_across_years(district_year_adm,
               unhighlighted_params = list(alpha = 0.5)) +
   scale_color_brewer(palette = "Dark2")
 ```
+
+About 13% of school districts have less than 100 students.
 
 ### Trends in State - Subgroup Enrollment
 
@@ -210,12 +221,17 @@ ggplot(filter(state_year_subgroup_enrollment, school_year < 2023),
   labs(title = "State-level subgroup representation")
 ```
 
+Around 40% of Oregon’s students are in programs or demographic categories that get additional funding weights from the state-funding formula. The three biggest groups are students under poverty, students served in special education and in English language programs.
+
+In 2011, about 16% of the all students were under poverty, 14% of all students were in special education programs and 9% of students were in the ESL programs. In 2024, students served in special education was the biggest group at 15% followed by students under poverty and students in ELP at around 12%. About 1% of the students are in other programs. 
+
 ### Trends in District - Subgroup Enrollment Across Years
+
+Next, we look at the trends percentage of subgroup representation across districts over time. 
 
 ```{r}
 categories <- unique(district_year_subgroup_enrollment$category)[c(1,3:7)]
 
-# HCD plot weird
 map(categories, ~cont_across_years_w_mean(df = filter(district_year_subgroup_enrollment, category == .x), var_x = school_year, var_y = prop_current_year_adm, log_on = F,
                                           mean_numerator = current_year_adm,
                                           mean_denominator = total,
@@ -223,7 +239,11 @@ map(categories, ~cont_across_years_w_mean(df = filter(district_year_subgroup_enr
       labs(title = .x))
 ```
 
-### Trends in District - Subgroup Enrollment by Total Enrollment For One-Year
+Students in special education (IEP or students with an Individualized Education Plans) and English language programs  have been steadily growing over the years, and those classified in poverty are steadily decreasing, but there is plenty of between-district variation. 
+
+Between 0 to 3% of students were classified as HCD between districts between 2018 to 2022.
+
+### Trends in District - Subgroup Enrollment by Total Enrollment For 2022
 
 ```{r}
 
@@ -237,7 +257,13 @@ map(categories, ~one_year_scatterplot_w_bars(df = filter(district_year_subgroup_
 
 ```
 
+For students with an IEP and student in poverty, there is variation in proportion of the subgroup relative to the school enrollment. However, the average sub-group representation by quintiles of school enrollment appears even, at between 12-16%. A handful of school districts with an enrollment of around 10 students served no special education students in their districts in 2022. Some of the low-enrollment schools have high representation of students in poverty.
+
+Students in ESL programs, and those in foster care or neglected/delinquent, pregnant and parenting programs, and those eligible for reimbursements from the high-cost disability funds are more concentrated in bigger schools.
+
 ## District Funds Allocation Data
+
+I define **allocation ratio** as the ratio of weighted average daily membership to the real average daily membership. Since students with some characteristics are weighted more than 1 per the state formula, a district gets resources as if there were more students in the school. So, an allocation ratio of 2 means that districts get 2 student equivalent for every 1 real student in their district.
 
 ```{r}
 district_year_adm_summary <- district_year_adm %>%
@@ -284,6 +310,8 @@ one_year_scatterplot_w_bars(df = district_year_adm_summary,
 #99.7% variance in the ADM is explained by the between-districts difference.
 # The enrollment remains pretty stable between districts across time.
 ```
+
+Students in smaller school districts get more per-student revenue allocated (in student units) than students in larger districts. In the first enrollment quintile, school districts get about 4 student equivalent for each of their student. In the second quintile, school districts get about 2 student equivalent for each of their student. In larger districts, school districts get 1.3 student equivalent for each of their student. 
 
 ```{r}
 #| eval: false
@@ -386,7 +414,15 @@ revenue %>%
   )
 ```
 
+School districts had an average total revenue of 18 billion dollars for the four years I had publically-available data. Of the total revenue, between 28-33% came from State resources, 23-25% came from local resources, and 35-40% came from Other resources. Intermediate and federal resources accounted for the remaining. 
+
+Almost all of state revenue is allocated using the SSF. Local revenue could be tax levies etc. The biggest contributor to Other resources are districts’ account balance from previous years – thus, districts saved substantial money from past years. The decrease in other sourcecs over the 4 years could be related to using emergency resources in response to COVID-19 related disruptions. 
+
+If we remove the other sources and only consider the new money districts get, about 50% comes from state resources and 40 percent come from local resources. Between 6 to 10% percent come from federal sources. 
+
 ### Trends in Per-pupil revenue by Districts based on sources
+
+To be described.
 
 ```{r}
 revenue_sources <- unique(revenue$source)
@@ -440,6 +476,8 @@ hcd_grant <- hcd_bar_plot(df = mutate(hcd_all_year, grant_amount_text = gsub("0{
 hcd_eligible + hcd_grant
 ```
 
+The number of students identified as eligible for 'High Cost Disability Fund' have doubled from 2003 to 2022, or from 0.5% of the enrollment in 2003 to 1% in 2022. The grant money has also increased in phases. The drop in the number of students eligible for HCD in 2005 is because the eligibility threshold for expenditure increased from 25k to 30k in 2005. 
+
 ### Students eligible for HCD and Per-pupil expenditure above threshold
 
 ```{r}
@@ -451,6 +489,8 @@ expense_per_student <- hcd_bar_plot(df = mutate(hcd_all_year, ppe = expenditure_
 
 hcd_eligible + expense_per_student
 ```
+
+Per-pupil expenditure over the threshold was 9000 in 2003 and was 25000 in 2022.
 
 ### Per-pupil reimbursment and Per-pupil expenditure above threshold
 
@@ -464,6 +504,8 @@ reimbusement_per_student <- hcd_bar_plot(df = mutate(hcd_all_year, ppe = expendi
 reimbusement_per_student + expense_per_student
 ```
 
+Reimbursement hasn’t increases as much as the expenses. The gap in per-student expenditure vs reimbursement was $3k in 2003 and it was 15k in 2022. 
+ 
 ```{r}
 #| eval: false
 
